feat: 이전 구현 부분까지 정리 및 커밋